Refactoring of the external microservice API exceptions.
