# doc-files/kypo-elasticsearch-service-swagger-open-api.yaml
@@ -797,78 +797,8 @@ definitions:
   ApiSubError:
     type: "object"
     properties:
-      status:
+      message:
         type: "string"
-        example: "404 Not found (different for each type of exception)."
-        description: "The HTTP response status code"
-        enum:
-        - "CONTINUE"
-        - "SWITCHING_PROTOCOLS"
-        - "PROCESSING"
-        - "CHECKPOINT"
-        - "OK"
-        - "CREATED"
-        - "ACCEPTED"
-        - "NON_AUTHORITATIVE_INFORMATION"
-        - "NO_CONTENT"
-        - "RESET_CONTENT"
-        - "PARTIAL_CONTENT"
-        - "MULTI_STATUS"
-        - "ALREADY_REPORTED"
-        - "IM_USED"
-        - "MULTIPLE_CHOICES"
-        - "MOVED_PERMANENTLY"
-        - "FOUND"
-        - "MOVED_TEMPORARILY"
-        - "SEE_OTHER"
-        - "NOT_MODIFIED"
-        - "USE_PROXY"
-        - "TEMPORARY_REDIRECT"
-        - "PERMANENT_REDIRECT"
-        - "BAD_REQUEST"
-        - "UNAUTHORIZED"
-        - "PAYMENT_REQUIRED"
-        - "FORBIDDEN"
-        - "NOT_FOUND"
-        - "METHOD_NOT_ALLOWED"
-        - "NOT_ACCEPTABLE"
-        - "PROXY_AUTHENTICATION_REQUIRED"
-        - "REQUEST_TIMEOUT"
-        - "CONFLICT"
-        - "GONE"
-        - "LENGTH_REQUIRED"
-        - "PRECONDITION_FAILED"
-        - "PAYLOAD_TOO_LARGE"
-        - "REQUEST_ENTITY_TOO_LARGE"
-        - "URI_TOO_LONG"
-        - "REQUEST_URI_TOO_LONG"
-        - "UNSUPPORTED_MEDIA_TYPE"
-        - "REQUESTED_RANGE_NOT_SATISFIABLE"
-        - "EXPECTATION_FAILED"
-        - "I_AM_A_TEAPOT"
-        - "INSUFFICIENT_SPACE_ON_RESOURCE"
-        - "METHOD_FAILURE"
-        - "DESTINATION_LOCKED"
-        - "UNPROCESSABLE_ENTITY"
-        - "LOCKED"
-        - "FAILED_DEPENDENCY"
-        - "UPGRADE_REQUIRED"
-        - "PRECONDITION_REQUIRED"
-        - "TOO_MANY_REQUESTS"
-        - "REQUEST_HEADER_FIELDS_TOO_LARGE"
-        - "UNAVAILABLE_FOR_LEGAL_REASONS"
-        - "INTERNAL_SERVER_ERROR"
-        - "NOT_IMPLEMENTED"
-        - "BAD_GATEWAY"
-        - "SERVICE_UNAVAILABLE"
-        - "GATEWAY_TIMEOUT"
-        - "HTTP_VERSION_NOT_SUPPORTED"
-        - "VARIANT_ALSO_NEGOTIATES"
-        - "INSUFFICIENT_STORAGE"
-        - "LOOP_DETECTED"
-        - "BANDWIDTH_LIMIT_EXCEEDED"
-        - "NOT_EXTENDED"
-        - "NETWORK_AUTHENTICATION_REQUIRED"
     description: "Superclass for classes JavaApiError and PythonApiError"
   EntityErrorDetail:
     type: "object"
@@ -894,16 +824,88 @@ definitions:
     - $ref: "#/definitions/ApiSubError"
     - type: "object"
       properties:
-        timestamp:
-          type: "integer"
-          format: "int64"
-          example: "1574062900 (different for each type of exception)"
-          description: "The time when the exception occurred"
         message:
           type: "string"
           example: "The IDMGroup could not be found in database (different for each\
             \ type of exception)."
           description: "The specific description of the ApiError."
+        timestamp:
+          type: "integer"
+          format: "int64"
+          example: "1574062900 (different for each type of exception)"
+          description: "The time when the exception occurred"
+        status:
+          type: "string"
+          example: "404 Not found (different for each type of exception)."
+          description: "The HTTP response status code"
+          enum:
+          - "CONTINUE"
+          - "SWITCHING_PROTOCOLS"
+          - "PROCESSING"
+          - "CHECKPOINT"
+          - "OK"
+          - "CREATED"
+          - "ACCEPTED"
+          - "NON_AUTHORITATIVE_INFORMATION"
+          - "NO_CONTENT"
+          - "RESET_CONTENT"
+          - "PARTIAL_CONTENT"
+          - "MULTI_STATUS"
+          - "ALREADY_REPORTED"
+          - "IM_USED"
+          - "MULTIPLE_CHOICES"
+          - "MOVED_PERMANENTLY"
+          - "FOUND"
+          - "MOVED_TEMPORARILY"
+          - "SEE_OTHER"
+          - "NOT_MODIFIED"
+          - "USE_PROXY"
+          - "TEMPORARY_REDIRECT"
+          - "PERMANENT_REDIRECT"
+          - "BAD_REQUEST"
+          - "UNAUTHORIZED"
+          - "PAYMENT_REQUIRED"
+          - "FORBIDDEN"
+          - "NOT_FOUND"
+          - "METHOD_NOT_ALLOWED"
+          - "NOT_ACCEPTABLE"
+          - "PROXY_AUTHENTICATION_REQUIRED"
+          - "REQUEST_TIMEOUT"
+          - "CONFLICT"
+          - "GONE"
+          - "LENGTH_REQUIRED"
+          - "PRECONDITION_FAILED"
+          - "PAYLOAD_TOO_LARGE"
+          - "REQUEST_ENTITY_TOO_LARGE"
+          - "URI_TOO_LONG"
+          - "REQUEST_URI_TOO_LONG"
+          - "UNSUPPORTED_MEDIA_TYPE"
+          - "REQUESTED_RANGE_NOT_SATISFIABLE"
+          - "EXPECTATION_FAILED"
+          - "I_AM_A_TEAPOT"
+          - "INSUFFICIENT_SPACE_ON_RESOURCE"
+          - "METHOD_FAILURE"
+          - "DESTINATION_LOCKED"
+          - "UNPROCESSABLE_ENTITY"
+          - "LOCKED"
+          - "FAILED_DEPENDENCY"
+          - "UPGRADE_REQUIRED"
+          - "PRECONDITION_REQUIRED"
+          - "TOO_MANY_REQUESTS"
+          - "REQUEST_HEADER_FIELDS_TOO_LARGE"
+          - "UNAVAILABLE_FOR_LEGAL_REASONS"
+          - "INTERNAL_SERVER_ERROR"
+          - "NOT_IMPLEMENTED"
+          - "BAD_GATEWAY"
+          - "SERVICE_UNAVAILABLE"
+          - "GATEWAY_TIMEOUT"
+          - "HTTP_VERSION_NOT_SUPPORTED"
+          - "VARIANT_ALSO_NEGOTIATES"
+          - "INSUFFICIENT_STORAGE"
+          - "LOOP_DETECTED"
+          - "BANDWIDTH_LIMIT_EXCEEDED"
+          - "NOT_EXTENDED"
+          - "NETWORK_AUTHENTICATION_REQUIRED"
         errors:
           type: "array"
           example: "[The requested resource was not found (different for each type\
